# generic

./: PR1.md  README.md  data.txt  russian_roulette.py  sample_code.py
practice-04/: main.py
practice-04/defintions/: consts.py
practice-04/logic/: gallows.py  game.py
practice-05/: example.py  functions.py  pyproject.toml  scope.py
practice-06/: examples.py  main.py
practice-07/: example.py
practice-08/: code  config.json  config.py  config.yaml  example.txt  files.py  formats.py  item.binary  item.binary2  item.json  network.py  test.py
src/: hash.cpp
