[tool.poetry]
name = "practice-05"
version = "0.1.0"
description = ""
authors = ["Daniil Oreshnikov <doreshhh@yandex-team.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
setuptools = "^75.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
